# internal/services/gateway/internal/handler/notification/ws.go
@@ -1,16 +1,54 @@
 package notification
 
 import (
+	"encoding/json"
 	"github.com/gin-gonic/gin"
-	"github.com/go-acme/lego/v4/log"
 	"github.com/gorilla/websocket"
+	"log"
 )
 
 var upgrader = websocket.Upgrader{}
 
+type LikeInfo struct {
+	PostId     uint32 `json:"post_id"`
+	Account    string `json:"account"`
+	CreateTime string `json:"create_time"`
+	LikeType   string `json:"like_type"`
+	Title      string `json:"title"`
+	Avatar     string `json:"avatar"`
+}
+
+func (l *LikeInfo) Marshal() ([]byte, error) {
+	return json.Marshal(l)
+}
+
+func (l *LikeInfo) Unmarshal(data []byte) error {
+	return json.Unmarshal(data, l)
+}
+
+type Comment struct {
+	CommentId   uint32 `json:"comment_id"`
+	PostId      uint32 `json:"post_id"`
+	ToUserId    string `json:"to_user_id"`
+	FromUserId  string `json:"from_user_id"`
+	CommentTime string `json:"comment_time"`
+	Content     string `json:"content"`
+	CommentType string `json:"comment_type"`
+	Title       string `json:"title"`
+	Avatar      string `json:"avatar"`
+}
+
+func (c *Comment) Marshal() ([]byte, error) {
+	return json.Marshal(c)
+}
+
+func (c *Comment) Unmarshal(data []byte) error {
+	return json.Unmarshal(data, c)
+}
+
 //  SendNotification sendNotification
 //	@Summary		获取用户通知（被点赞/评论） api
-//	@Tags			post
+//	@Tags			notification
 //	@Description	获取用户通知
 //	@Accept			json
 //	@Produce		json
@@ -18,6 +56,8 @@ var upgrader = websocket.Upgrader{}
 //	@Success		200				{object}	internal.Response
 //	@Router			/notification [get]
 func (n *notificationHandler) SendNotification(c *gin.Context) {
+	account := c.MustGet("account")
+	
 	ws, err := upgrader.Upgrade(c.Writer, c.Request, nil)
 	if err != nil {
 		log.Println(err)
@@ -35,20 +75,39 @@ func (n *notificationHandler) SendNotification(c *gin.Context) {
 			if !ok {
 				continue
 			}
+			var likeInfo LikeInfo
+			if err := likeInfo.Unmarshal([]byte(msg.Payload)); err != nil {
+				log.Println("Unmarshal err:", err)
+				continue
+			}
+			
+			if likeInfo.Account != account {
+				continue
+			}
+			
 			err := ws.WriteMessage(websocket.TextMessage, []byte(msg.Payload))
 			if err != nil {
 				log.Println("Like: fail to send message with websocket:", err)
 			}
-			log.Println(msg.Payload)
+		
 		case msg, ok := <-consumerComment.Channel():
 			if !ok {
 				continue
 			}
+			var comment Comment
+			if err := comment.Unmarshal([]byte(msg.Payload)); err != nil {
+				log.Println("Unmarshal err:", err)
+				continue
+			}
+			
+			if comment.ToUserId != account {
+				continue
+			}
+			
 			err := ws.WriteMessage(websocket.TextMessage, []byte(msg.Payload))
 			if err != nil {
 				log.Println("Comment: fail to send message with websocket:", err)
 			}
-			log.Println(msg.Payload)
 		case <-c.Request.Context().Done():
 			return
 		}
